# libcaca

./: .gitignore  CMakeLists.txt  README  config.h.in
caca/: caca.h  libcaca.vcxproj  libcaca.vcxproj.filters  time.c
caca-sharp/: caca-sharp.csproj  test-csharp.csproj
caca/driver/: gl.c
caca/t/: bench.vcxproj
cxx/: libcaca++.vcxproj  test-cxx.vcxproj
examples/: blit.vcxproj  colors.c  colors.vcxproj  conio-snake.vcxproj  conio.vcxproj  demo.vcxproj  dithering.vcxproj  driver.vcxproj  event.vcxproj  font.vcxproj  frames.vcxproj  fullwidth.c  fullwidth.vcxproj  gamma.vcxproj  hsv.vcxproj  import.vcxproj  input.c  input.vcxproj  transform.c  transform.vcxproj  truecolor.vcxproj  unicode.c  unicode.vcxproj
src/: cacademo.c  cacademo.vcxproj  cacafire.vcxproj  cacaview.vcxproj  common-image.c
